added additional ACLs for some servers that remain at CSHL (emergency capacity); cleaned up and refined config

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -576,17 +576,13 @@
 #
 #Default:
 # acl all src all
-#
-
-
-
 
 
 #Recommended minimum configuration:
 acl manager proto cache_object
 acl localhost src 127.0.0.1/32
 acl to_localhost dst 127.0.0.0/8
-#
+
 # Example rule allowing access from your local networks.
 # Adapt to list your (internal) IP networks from where browsing
 # should be allowed
@@ -607,30 +603,68 @@ acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
 acl CONNECT method CONNECT
 
-
-
-
 # The public facing host - destination
-acl from_proxy_host src 143.48.220.124/255.255.255.255
-acl proxy_host dst 143.48.220.124/255.255.255.255
-#acl proxy_port port 80
+#acl from_proxy_host src 143.48.220.124/255.255.255.255
+#acl proxy_host dst 143.48.220.124/255.255.255.255
 
 # Allow purging of cache objects from the localhost
 acl PURGE method purge
 
-# 2010: no longer using
-## only allow access to cache 
-## manager from th and localhost
-#acl CacheManager proto cache_object
-#acl ToddAtHome src 24.10.175.230/255.255.255.255
+
+# Access controls for our back end machines
+# This is the main website name, not the name of the proxy.
+acl our_servers dstdomain wb-web1.oicr.on.ca
+#acl our_servers dstdomain www.wormbase.org
 
 
-# no_cache ACL rules:
-# Skip caching of any requests for GBrowse, cisortho, WormMart, and various VirtualHosts
-# NOTE: This will also block caching of gbrowse_img (which is as it should be)
-#acl GBROWSEIMG urlpath_regex -i /gbrowse/
+# Blog, forums, wiki. These are now all subdomains
+# and don't pass through the proxy.  This configuration (and apache-fu
+# in virtual hosts) serves to trap and issue 301s for old URLs
+# floating around.
+# Forums: formerly located at wormbase.org/forums
+acl forums urlpath_regex ^/forums(.*)?$
 
-#acl nbrowse  url_regex -i nbrowse
+# Wiki: formerly located at wormbase.org/wiki
+acl wiki urlpath_regex ^/wiki(.*)?$
+
+# Blog: formerly located at wormbase.org/blog
+acl blog urlpath_regex ^/blog(.*)?$
+
+# Combine all social elements into a single ACL for ease-of-use
+acl social urlpath_regex ^/forums(.*)?$ ^/blog(.*)?$ ^/wiki(.*)?$
+
+# Send various mining queries to a single box.
+acl mining url_regex wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat searches/basic
+
+# biomart
+acl biomart url_regex biomart martview
+
+# GBrowse2 URLs: Done 7/23/2010
+acl gbrowse2 url_regex  gb2/gbrowse gb2-support gbrowse2
+acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
+acl gbrowse1_proper     urlpath_regex ^/gbrowse
+
+# Synteny Browser
+acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
+
+# Requests to /db
+acl db urlpath_regex ^/db
+
+# The computationally intensive gene page
+acl gene url_regex gene/gene
+
+# Dynamic images. Using ACLs is so much more annoying than in Perl
+acl web1-images url_regex dynamic_images/wb-web1
+acl web2-images url_regex dynamic_images/wb-web2
+acl web3-images url_regex dynamic_images/wb-web3
+acl web4-images url_regex dynamic_images/wb-web4
+acl mining-images url_regex dynamic_images/wb-mining
+
+# Exclude other dynamic images
+acl dynamic_images urlpath_regex ^/dynamic_images
+
+# ACL for the new website. These requests will ONLY be served from web1 for now.
+acl protein-new url_regex rest db/seq/protein jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png
 
 
 
@@ -659,9 +693,16 @@ acl PURGE method purge
 #Recommended minimum configuration:
 #
 
+# First, make sure we can actually connect
+http_access allow our_servers
+http_access deny all
 
-#######  ---------> http_access rules moved BELOW cache_peer directives for now
-
+# Only allow cachemgr access from localhost
+#http_access deny manager
+# Deny requests to unknown ports
+http_access deny !Safe_ports
+# Deny CONNECT to other than SSL ports
+http_access deny CONNECT !SSL_ports
 
 
 #  TAG: http_reply_access
@@ -711,7 +752,6 @@ icp_access deny all
 #
 #Allow HTCP queries from local networks only
 #htcp_access allow localnet
-htcp_access deny all
 
 #  TAG: htcp_clr_access
 #	Allowing or Denying access to purge content using HTCP based
@@ -798,13 +838,6 @@ htcp_access deny all
 #
 #Default:
 # none
-
-
-
-
-
-
-
 
 
 
@@ -1513,54 +1546,6 @@ http_port 8080 accel defaultsite=wb-web1.oicr.on.ca
 #Default:
 # none
 
-# Access controls for our back end machines
-# This is the main website name, not the name of the proxy.
-acl our_servers dstdomain wb-web1.oicr.on.ca
-#acl our_servers dstdomain www.wormbase.org
-
-
-# Blog, forums, wiki. These are now all subdomains
-# and don't pass through the proxy.  This configuration (and apache-fu
-# in virtual hosts) serves to trap and issue 301s for old URLs
-# floating around.
-# Forums: formerly located at wormbase.org/forums
-acl forums urlpath_regex ^/forums
-
-# Wiki: formerly located at wormbase.org/wiki
-acl wiki urlpath_regex ^/wiki
-
-# Blog: formerly located at wormbase.org/blog
-acl blog urlpath_regex ^/blog
-
-# Combine all social elements into a single ACL for ease-of-use
-acl social urlpath_regex ^/forums ^/blog ^/wiki
-
-# Send various mining queries to a single box.
-acl mining url_regex wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat searches/basic
-
-# biomart
-acl biomart url_regex biomart martview
-
-# GBrowse2 URLs: Done 7/23/2010
-acl gbrowse2 url_regex  gb2/gbrowse gb2-support gbrowse2
-acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
-acl gbrowse1_proper     urlpath_regex ^/gbrowse
-
-# Synteny Browser
-acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
-
-# Requests to /db
-acl db urlpath_regex ^/db
-
-# The computationally intensive gene page
-acl gene url_regex gene/gene
-
-# Dynamic images. Using ACLs is so much more annoying than in Perl
-acl web1-images url_regex dynamic_images/wb-web1
-acl web2-images url_regex dynamic_images/wb-web2
-acl web3-images url_regex dynamic_images/wb-web3
-acl web4-images url_regex dynamic_images/wb-web4
-acl mining-images url_regex dynamic_images/wb-mining
 
 ###########################################
 #
@@ -1577,6 +1562,9 @@ cache_peer 206.108.125.177 parent 80 0 no-query no-digest originserver round-rob
 cache_peer 206.108.125.190 parent 80 0 no-query no-digest originserver round-robin name=wb-web3
 cache_peer 206.108.125.168 parent 80 0 no-query no-digest originserver round-robin name=wb-web4
 
+# The NEW website. Probably better to just set the destination port for these requests. Oh well.
+cache_peer 206.108.125.175 parent 8000 0 no-query no-digest originserver name=wb-web1-new
+
 # Data mining and gbrowse
 cache_peer 206.108.125.178 parent 80   0 no-query no-digest originserver name=mining
 cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
@@ -1588,7 +1576,13 @@ cache_peer 206.108.125.176 parent 8080 0 no-query no-digest originserver name=wi
 cache_peer 206.108.125.176 parent 8081 0 no-query no-digest originserver name=forums
 
 # Some servers that still reside at CSHL
-cache_peer 143.48.220.68 parent 8080 0 no-query no-digest originserver name=be1
+#cache_peer 143.48.220.68 parent 8080 0 no-query no-digest originserver name=be1
+# be1  : 68 (firewalled)
+# brie6: 86 (broken)
+# brie3: 84
+cache_peer 143.48.220.86 parent 80 0 no-query no-digest originserver name=brie6
+#cache_peer 143.48.220.84 parent 80 0 no-query no-digest originserver name=brie6
+
 
 # The synteny browser - STILL on mckay.cshl.edu
 cache_peer 143.48.220.100 parent 80 0 no-query no-digest originserver name=synteny
@@ -1603,9 +1597,6 @@ cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biom
 #
 ###########################################
 
-# First, make sure we can actually connect
-http_access allow our_servers
-http_access deny all
 
 # Special cases: allow from its like-named ACL; deny from all others
 # GBrowse2
@@ -1621,11 +1612,11 @@ cache_peer_access gbrowse1 deny all
 cache_peer_access synteny allow synteny
 cache_peer_access synteny deny all
 
-# The Blog
+# Blog
 cache_peer_access blog allow blog
 cache_peer_access blog deny all
 
-# The Wiki
+# Wiki
 cache_peer_access wiki allow wiki
 cache_peer_access wiki deny all
 
@@ -1635,32 +1626,44 @@ cache_peer_access forums deny all
 
 # Data mining queries
 cache_peer_access mining allow mining
+cache_peer_access mining allow mining-images
 cache_peer_access mining deny all
 
+# Biomart queries
 cache_peer_access biomart allow biomart
 cache_peer_access biomart deny all
 
-# Gene pages to be1
-#cache_peer_access be1 allow gene
-#cache_peer_access be1 deny all
+# Gene pages to brie6
+cache_peer_access brie6 allow gene
+cache_peer_access brie6 deny all
+cache_peer_access wb-web1  deny gene
+cache_peer_access wb-web2  deny gene
+cache_peer_access wb-web3  deny gene
+cache_peer_access wb-web4  deny gene
+
 
 # /db and static requests, distributed across web1-web4
 # We have to deny gbrowse1/2 and mining because they are under /db.
 # We deny biomart, synteny, and social for safety
 # We allow everything else to distribute static content.
+
+# web1 (new site)
+cache_peer_access wb-web1-new  allow protein-new
+cache_peer_access wb-web1-new  deny all
+
 # web1
 cache_peer_access wb-web1  deny gbrowse2
 cache_peer_access wb-web1  deny gbrowse1
 cache_peer_access wb-web1  deny gbrowse1_proper
 cache_peer_access wb-web1  deny mining
+cache_peer_access wb-web1  deny protein-new
 cache_peer_access wb-web1  deny biomart
-#cache_peer_access wb-web1  deny gene
 cache_peer_access wb-web1  deny synteny
 cache_peer_access wb-web1  deny social
 cache_peer_access wb-web1  allow db
 cache_peer_access wb-web1  allow web1-images
-# Is this next statement the same thing as deny all?
-cache_peer_access wb-web1  allow !social !synteny !gbrowse2 !gene !mining
+cache_peer_access wb-web1  deny dynamic_images
+cache_peer_access wb-web1  allow !db
 cache_peer_access wb-web1  deny all
 
 # web2
@@ -1668,12 +1671,14 @@ cache_peer_access wb-web2  deny gbrowse2
 cache_peer_access wb-web2  deny gbrowse1
 cache_peer_access wb-web2  deny gbrowse1_proper
 cache_peer_access wb-web2  deny mining
+cache_peer_access wb-web2  deny protein-new
 cache_peer_access wb-web2  deny biomart
-#cache_peer_access wb-web2  deny gene
 cache_peer_access wb-web2  deny synteny
 cache_peer_access wb-web2  deny social
+cache_peer_access wb-web2  allow db
 cache_peer_access wb-web2  allow web2-images
-cache_peer_access wb-web2  allow !social !synteny !gbrowse2 !gene !mining
+cache_peer_access wb-web2  deny dynamic_images
+cache_peer_access wb-web2  allow !db
 cache_peer_access wb-web2  deny all
 
 # web3
@@ -1681,13 +1686,14 @@ cache_peer_access wb-web3  deny gbrowse2
 cache_peer_access wb-web3  deny gbrowse1
 cache_peer_access wb-web3  deny gbrowse1_proper
 cache_peer_access wb-web3  deny mining
+cache_peer_access wb-web3  deny protein-new
 cache_peer_access wb-web3  deny biomart
-#cache_peer_access wb-web3  deny gene
 cache_peer_access wb-web3  deny synteny
 cache_peer_access wb-web3  deny social
 cache_peer_access wb-web3  allow db
 cache_peer_access wb-web3  allow web3-images
-cache_peer_access wb-web3  allow !social !synteny !gbrowse2 !gene !mining
+cache_peer_access wb-web3  deny dynamic_images
+cache_peer_access wb-web3  allow !db
 cache_peer_access wb-web3  deny all
 
 # web4
@@ -1695,13 +1701,14 @@ cache_peer_access wb-web4  deny gbrowse2
 cache_peer_access wb-web4  deny gbrowse1
 cache_peer_access wb-web4  deny gbrowse1_proper
 cache_peer_access wb-web4  deny mining
+cache_peer_access wb-web4  deny protein-new
 cache_peer_access wb-web4  deny biomart
-#cache_peer_access wb-web4  deny gene
 cache_peer_access wb-web4  deny synteny
 cache_peer_access wb-web4  deny social
 cache_peer_access wb-web4  allow db
 cache_peer_access wb-web4  allow web4-images
-cache_peer_access wb-web4  allow !social !synteny !gbrowse2 !gene !mining
+cache_peer_access wb-web4  deny dynamic_images
+cache_peer_access wb-web4  allow !db
 cache_peer_access wb-web4  deny all
 
 # Don't cache some entities
@@ -1716,12 +1723,6 @@ cache deny feedback
 cache deny rss
 
 
-# Only allow cachemgr access from localhost
-#http_access deny manager
-# Deny requests to unknown ports
-#http_access deny !Safe_ports
-# Deny CONNECT to other than SSL ports
-#http_access deny CONNECT !SSL_ports
 
 # We strongly recommend the following be uncommented to protect innocent
 # web applications running on the proxy server who think the only
@@ -2528,8 +2529,8 @@ url_rewrite_host_header off
 #Default:
 # none
 
-## TOTEST / Necessary?
-## The public facing host - destination
+# No longer using a redirector
+# The public facing host - destination
 #acl from_proxy_host_test src 143.48.220.124/255.255.255.255
 #acl proxy_host_test dst 206.108.125/255.255.255.255
 #
