hacking up deployment scripts

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -5,10 +5,10 @@ FDT_JAR=/home/tharris/fdt/fdt.jar
 # The first production node that we will stage updates from.
 # This is not necessary if the development node and all
 # production nodes reside within the firewall
-STAGING_NODE=brie3
+STAGING_NODE=brie3.cshl.org
 
-FTP_SERVER=brie4.cshl.org
-FTP_SITE_USER=todd
+#FTP_SERVER=brie4.cshl.org
+#FTP_SITE_USER=todd
 
 NFS_NODE=brie6.cshl.org
 NFS_ROOT=/usr/local/wormbase/nfs
@@ -143,11 +143,11 @@ MYSQL_DATABASES=("b_malayi
 # autocomplete
 
 
-##############################
+##########################################################
 # Support databases
-# Synced to local and remote production nodes by cron
+# Kept in sync with local and remote production nodes by cron
 # cron-rsync_support_dbs.sh
-##############################
+##########################################################
 SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
 OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
 			wb-web2.oicr.on.ca
