--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -660,13 +660,18 @@ acl web3-images url_regex dynamic_images/wb-web3
 acl web4-images url_regex dynamic_images/wb-web4
 acl mining-images url_regex dynamic_images/wb-mining
 
+
+
 # Exclude other dynamic images
 acl dynamic_images urlpath_regex ^/dynamic_images
+acl dynamic_images-new urlpath_regex ^/tmp/(.*)/images
 
 # ACL for the new website. These requests will ONLY be served from web1 for now.
-acl protein-new url_regex rest db/seq/protein jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png
-
-
+acl new-site url_regex rest db/seq/sequence db/seq/protein db/gene/variation jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png
+acl web1-dynamic-images url_regex tmp/wb-web1
+acl web2-dynamic-images url_regex tmp/wb-web2
+acl web3-dynamic-images url_regex tmp/wb-web3
+acl web4-dynamic-images url_regex tmp/wb-web4
 
 
 #  TAG: http_access
@@ -927,8 +932,8 @@ icp_access deny all
 #http_port 3128
 # Defaultsite is the main website name, not the name of the server running the proxy.
 #http_port 8080 accel defaultsite=206.108.125.175
-http_port 8080 accel defaultsite=wb-web1.oicr.on.ca
-#http_port 8080 accel defaultsite=www.wormbase.org
+http_port 80 accel defaultsite=wb-web1.oicr.on.ca
+#http_port 80 accel defaultsite=www.wormbase.org
 
 #  TAG: https_port
 # Note: This option is only available if Squid is rebuilt with the
@@ -1557,20 +1562,26 @@ http_port 8080 accel defaultsite=wb-web1.oicr.on.ca
 # and comment out the applied ACLs below.
 
 # Round-robin cache peers
-cache_peer 206.108.125.175 parent 80 0 no-query no-digest originserver round-robin name=wb-web1
-cache_peer 206.108.125.177 parent 80 0 no-query no-digest originserver round-robin name=wb-web2
-cache_peer 206.108.125.190 parent 80 0 no-query no-digest originserver round-robin name=wb-web3
-cache_peer 206.108.125.168 parent 80 0 no-query no-digest originserver round-robin name=wb-web4
+cache_peer 206.108.125.175 parent 8080 0 no-query no-digest originserver round-robin name=wb-web1
+cache_peer 206.108.125.177 parent 8080 0 no-query no-digest originserver round-robin name=wb-web2
+cache_peer 206.108.125.190 parent 8080 0 no-query no-digest originserver round-robin name=wb-web3
+cache_peer 206.108.125.168 parent 8080 0 no-query no-digest originserver round-robin name=wb-web4
 
 # The NEW website. Probably better to just set the destination port for these requests. Oh well.
-cache_peer 206.108.125.175 parent 8000 0 no-query no-digest originserver name=wb-web1-new
+cache_peer 206.108.125.175 parent 8000 0 no-query no-digest originserver round-robin name=wb-web1-new
+cache_peer 206.108.125.177 parent 8000 0 no-query no-digest originserver round-robin name=wb-web2-new
+cache_peer 206.108.125.190 parent 8000 0 no-query no-digest originserver round-robin name=wb-web3-new
+cache_peer 206.108.125.168 parent 8000 0 no-query no-digest originserver round-robin name=wb-web4-new
 
 # Data mining and gbrowse
-cache_peer 206.108.125.178 parent 80   0 no-query no-digest originserver name=mining
+cache_peer 206.108.125.178 parent 8080 0 no-query no-digest originserver name=mining
 cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
 cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver name=gbrowse2
 
 # Social sites: blog, wiki, forums
+# I have virtual hosts listening on these ports
+# that issue a 301 redirect to a NameVirtualHost for each site on port 80.
+# Maintain for now.
 cache_peer 206.108.125.176 parent 80   0 no-query no-digest originserver name=blog
 cache_peer 206.108.125.176 parent 8080 0 no-query no-digest originserver name=wiki
 cache_peer 206.108.125.176 parent 8081 0 no-query no-digest originserver name=forums
@@ -1648,21 +1659,39 @@ cache_peer_access wb-web4  deny gene
 # We allow everything else to distribute static content.
 
 # web1 (new site)
-cache_peer_access wb-web1-new  allow protein-new
+cache_peer_access wb-web1-new  allow new-site
+cache_peer_access wb-web1-new  allow web1-dynamic-images
 cache_peer_access wb-web1-new  deny all
+
+cache_peer_access wb-web2-new  allow new-site
+cache_peer_access wb-web2-new  allow web2-dynamic-images
+cache_peer_access wb-web2-new  deny all
+
+cache_peer_access wb-web3-new  allow new-site
+cache_peer_access wb-web3-new  allow web3-dynamic-images
+cache_peer_access wb-web3-new  deny all
+
+cache_peer_access wb-web4-new  allow new-site
+cache_peer_access wb-web4-new  allow web4-dynamic-images
+cache_peer_access wb-web4-new  deny all
+
+
+
+
 
 # web1
 cache_peer_access wb-web1  deny gbrowse2
 cache_peer_access wb-web1  deny gbrowse1
 cache_peer_access wb-web1  deny gbrowse1_proper
 cache_peer_access wb-web1  deny mining
-cache_peer_access wb-web1  deny protein-new
+cache_peer_access wb-web1  deny new-site
 cache_peer_access wb-web1  deny biomart
 cache_peer_access wb-web1  deny synteny
 cache_peer_access wb-web1  deny social
 cache_peer_access wb-web1  allow db
 cache_peer_access wb-web1  allow web1-images
 cache_peer_access wb-web1  deny dynamic_images
+cache_peer_access wb-web1  deny dynamic_images-new
 cache_peer_access wb-web1  allow !db
 cache_peer_access wb-web1  deny all
 
@@ -1671,13 +1700,14 @@ cache_peer_access wb-web2  deny gbrowse2
 cache_peer_access wb-web2  deny gbrowse1
 cache_peer_access wb-web2  deny gbrowse1_proper
 cache_peer_access wb-web2  deny mining
-cache_peer_access wb-web2  deny protein-new
+cache_peer_access wb-web2  deny new-site
 cache_peer_access wb-web2  deny biomart
 cache_peer_access wb-web2  deny synteny
 cache_peer_access wb-web2  deny social
 cache_peer_access wb-web2  allow db
 cache_peer_access wb-web2  allow web2-images
 cache_peer_access wb-web2  deny dynamic_images
+cache_peer_access wb-web2  deny dynamic_images-new
 cache_peer_access wb-web2  allow !db
 cache_peer_access wb-web2  deny all
 
@@ -1686,13 +1716,14 @@ cache_peer_access wb-web3  deny gbrowse2
 cache_peer_access wb-web3  deny gbrowse1
 cache_peer_access wb-web3  deny gbrowse1_proper
 cache_peer_access wb-web3  deny mining
-cache_peer_access wb-web3  deny protein-new
+cache_peer_access wb-web3  deny new-site
 cache_peer_access wb-web3  deny biomart
 cache_peer_access wb-web3  deny synteny
 cache_peer_access wb-web3  deny social
 cache_peer_access wb-web3  allow db
 cache_peer_access wb-web3  allow web3-images
 cache_peer_access wb-web3  deny dynamic_images
+cache_peer_access wb-web3  deny dynamic_images-new
 cache_peer_access wb-web3  allow !db
 cache_peer_access wb-web3  deny all
 
@@ -1701,13 +1732,14 @@ cache_peer_access wb-web4  deny gbrowse2
 cache_peer_access wb-web4  deny gbrowse1
 cache_peer_access wb-web4  deny gbrowse1_proper
 cache_peer_access wb-web4  deny mining
-cache_peer_access wb-web4  deny protein-new
+cache_peer_access wb-web4  deny new-site
 cache_peer_access wb-web4  deny biomart
 cache_peer_access wb-web4  deny synteny
 cache_peer_access wb-web4  deny social
 cache_peer_access wb-web4  allow db
 cache_peer_access wb-web4  allow web4-images
 cache_peer_access wb-web4  deny dynamic_images
+cache_peer_access wb-web4  deny dynamic_images-new
 cache_peer_access wb-web4  allow !db
 cache_peer_access wb-web4  deny all
 
@@ -2323,11 +2355,11 @@ pid_filename /usr/local/squid/var/logs/squid.pid
 #	"ALL,1".
 #
 #Default:
-#debug_options ALL,1
+debug_options ALL,1
 #debug_options ALL,9
 
 # For debugging ACLs
-debug_options ALL,1 33,2 28,9
+#debug_options ALL,1 33,2 28,9
 
 #  TAG: log_fqdn	on|off
 #	Turn this on if you wish to log fully qualified domain names
