updating some production deployment scripts for classic and new sites

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -10,8 +10,8 @@ STAGING_NODE=brie3.cshl.org
 #FTP_SERVER=brie4.cshl.org
 #FTP_SITE_USER=todd
 
-NFS_NODE=brie6.cshl.org
-NFS_ROOT=/usr/local/wormbase/nfs
+LOCAL_NFS_SERVER=wb-web1.oicr.on.ca
+LOCAL_NFS_ROOT=/usr/local/wormbase/shared
 
 
 
@@ -84,7 +84,9 @@ OICR_ACEDB_NODES=("
 	wb-web3.oicr.on.ca
 	wb-web4.oicr.on.ca
 ")
-REMOTE_ACEDB_NODES=("canopus.caltech.edu")
+REMOTE_ACEDB_NODES=("brie3.cshl.org
+		     brie6.cshl.org
+		     canopus.caltech.edu")
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
@@ -105,8 +107,6 @@ GBROWSE_PRODUCTION_MYSQL_DATA_DIR=/usr/local/mysql/data
 ###########################################
 # MySQL - nodes that host mysql databases
 ###########################################
-REMOTE_MYSQL_NODES=("canopus.caltech.edu")
-
 OICR_MYSQL_NODES=("
 	wb-gb1.oicr.on.ca
 	wb-gb2.oicr.on.ca
@@ -116,6 +116,12 @@ OICR_MYSQL_NODES=("
 	wb-web3.oicr.on.ca
 	wb-web4.oicr.on.ca
 ");
+
+REMOTE_MYSQL_NODES=("
+		brie3.cshl.org
+		brie6.cshl.org
+		canopus.caltech.edu")
+
 
 
 # The location of the staging mysql data dir
