updated conf for rollout of squid at OICR

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -1,4 +1,3 @@
-
 #	WELCOME TO SQUID 3.0.STABLE8
 #	----------------------------
 #
@@ -613,8 +612,8 @@ acl PURGE method purge
 
 # Access controls for our back end machines
 # This is the main website name, not the name of the proxy.
-acl our_servers dstdomain wb-web1.oicr.on.ca
-#acl our_servers dstdomain www.wormbase.org
+#acl our_servers dstdomain wb-web1.oicr.on.ca
+acl our_servers dstdomain www.wormbase.org
 
 
 # Blog, forums, wiki. These are now all subdomains
@@ -640,9 +639,9 @@ acl mining url_regex wb_query aql_query class_query batch_genes searches/advance
 acl biomart url_regex biomart martview
 
 # GBrowse2 URLs: Done 7/23/2010
-acl gbrowse2 url_regex  gb2/gbrowse gb2-support gbrowse2
-acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
-acl gbrowse1_proper     urlpath_regex ^/gbrowse
+acl gbrowse2 url_regex  gb2/gbrowse gb2-support gbrowse2 db/gb2 gbrowse_img gbrowse2/images
+#acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
+#acl gbrowse1_proper     urlpath_regex ^/gbrowse
 
 # Synteny Browser
 acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
@@ -651,7 +650,7 @@ acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
 acl db urlpath_regex ^/db
 
 # The computationally intensive gene page
-acl gene url_regex gene/gene
+acl gene url_regex gene/gene db/gene/expression
 
 # Dynamic images. Using ACLs is so much more annoying than in Perl
 acl web1-images url_regex dynamic_images/wb-web1
@@ -661,17 +660,11 @@ acl web4-images url_regex dynamic_images/wb-web4
 acl mining-images url_regex dynamic_images/wb-mining
 
 
-
 # Exclude other dynamic images
-acl dynamic_images urlpath_regex ^/dynamic_images
-acl dynamic_images-new urlpath_regex ^/tmp/(.*)/images
+acl dynamic_images     urlpath_regex ^/dynamic_images
 
 # ACL for the new website. These requests will ONLY be served from web1 for now.
-acl new-site url_regex rest db/seq/sequence db/seq/protein db/gene/variation jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png
-acl web1-dynamic-images url_regex tmp/wb-web1
-acl web2-dynamic-images url_regex tmp/wb-web2
-acl web3-dynamic-images url_regex tmp/wb-web3
-acl web4-dynamic-images url_regex tmp/wb-web4
+acl new-site url_regex rest db/seq/sequence db/seq/protein db/gene/variation jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png media reports
 
 
 #  TAG: http_access
@@ -932,8 +925,8 @@ icp_access deny all
 #http_port 3128
 # Defaultsite is the main website name, not the name of the server running the proxy.
 #http_port 8080 accel defaultsite=206.108.125.175
-http_port 80 accel defaultsite=wb-web1.oicr.on.ca
-#http_port 80 accel defaultsite=www.wormbase.org
+#http_port 80 accel defaultsite=wb-web1.oicr.on.ca
+http_port 80 accel defaultsite=www.wormbase.org
 
 #  TAG: https_port
 # Note: This option is only available if Squid is rebuilt with the
@@ -1568,14 +1561,14 @@ cache_peer 206.108.125.190 parent 8080 0 no-query no-digest originserver round-r
 cache_peer 206.108.125.168 parent 8080 0 no-query no-digest originserver round-robin name=wb-web4
 
 # The NEW website. Probably better to just set the destination port for these requests. Oh well.
-cache_peer 206.108.125.175 parent 8000 0 no-query no-digest originserver round-robin name=wb-web1-new
-cache_peer 206.108.125.177 parent 8000 0 no-query no-digest originserver round-robin name=wb-web2-new
-cache_peer 206.108.125.190 parent 8000 0 no-query no-digest originserver round-robin name=wb-web3-new
-cache_peer 206.108.125.168 parent 8000 0 no-query no-digest originserver round-robin name=wb-web4-new
+#cache_peer 206.108.125.175 parent 8000 0 no-query no-digest originserver round-robin name=wb-web1-new
+#cache_peer 206.108.125.177 parent 8000 0 no-query no-digest originserver round-robin name=wb-web2-new
+#cache_peer 206.108.125.190 parent 8000 0 no-query no-digest originserver round-robin name=wb-web3-new
+#cache_peer 206.108.125.168 parent 8000 0 no-query no-digest originserver round-robin name=wb-web4-new
 
 # Data mining and gbrowse
 cache_peer 206.108.125.178 parent 8080 0 no-query no-digest originserver name=mining
-cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
+#cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
 cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver name=gbrowse2
 
 # Social sites: blog, wiki, forums
@@ -1587,12 +1580,13 @@ cache_peer 206.108.125.176 parent 8080 0 no-query no-digest originserver name=wi
 cache_peer 206.108.125.176 parent 8081 0 no-query no-digest originserver name=forums
 
 # Some servers that still reside at CSHL
-#cache_peer 143.48.220.68 parent 8080 0 no-query no-digest originserver name=be1
+
 # be1  : 68 (firewalled)
 # brie6: 86 (broken)
 # brie3: 84
-cache_peer 143.48.220.86 parent 80 0 no-query no-digest originserver name=brie6
-#cache_peer 143.48.220.84 parent 80 0 no-query no-digest originserver name=brie6
+#cache_peer 143.48.220.68 parent 8080 0 no-query no-digest originserver name=be1
+cache_peer 143.48.220.86 parent 80 0 no-query no-digest originserver round-robin name=brie6
+cache_peer 143.48.220.84 parent 80 0 no-query no-digest originserver round-robin name=brie3
 
 
 # The synteny browser - STILL on mckay.cshl.edu
@@ -1615,9 +1609,9 @@ cache_peer_access gbrowse2 allow gbrowse2
 cache_peer_access gbrowse2 deny all
 
 # GBrowse1 (Legacy)
-cache_peer_access gbrowse1 allow gbrowse1
-cache_peer_access gbrowse1 allow gbrowse1_proper
-cache_peer_access gbrowse1 deny all
+#cache_peer_access gbrowse1 allow gbrowse1
+#cache_peer_access gbrowse1 allow gbrowse1_proper
+#cache_peer_access gbrowse1 deny all
 
 # The synteny browser
 cache_peer_access synteny allow synteny
@@ -1644,9 +1638,12 @@ cache_peer_access mining deny all
 cache_peer_access biomart allow biomart
 cache_peer_access biomart deny all
 
-# Gene pages to brie6
+# 2010.09.01: TRYING TO SERVE EVERYTING FROM OICR
+# Gene pages to brie6 or brie3
 cache_peer_access brie6 allow gene
 cache_peer_access brie6 deny all
+cache_peer_access brie3 allow gene
+cache_peer_access brie3 deny all
 cache_peer_access wb-web1  deny gene
 cache_peer_access wb-web2  deny gene
 cache_peer_access wb-web3  deny gene
@@ -1659,21 +1656,17 @@ cache_peer_access wb-web4  deny gene
 # We allow everything else to distribute static content.
 
 # web1 (new site)
-cache_peer_access wb-web1-new  allow new-site
-cache_peer_access wb-web1-new  allow web1-dynamic-images
-cache_peer_access wb-web1-new  deny all
+#cache_peer_access wb-web1-new  allow new-site
+#cache_peer_access wb-web1-new  deny all
 
-cache_peer_access wb-web2-new  allow new-site
-cache_peer_access wb-web2-new  allow web2-dynamic-images
-cache_peer_access wb-web2-new  deny all
+#cache_peer_access wb-web2-new  allow new-site
+#cache_peer_access wb-web2-new  deny all
 
-cache_peer_access wb-web3-new  allow new-site
-cache_peer_access wb-web3-new  allow web3-dynamic-images
-cache_peer_access wb-web3-new  deny all
+#cache_peer_access wb-web3-new  allow new-site
+#cache_peer_access wb-web3-new  deny all
 
-cache_peer_access wb-web4-new  allow new-site
-cache_peer_access wb-web4-new  allow web4-dynamic-images
-cache_peer_access wb-web4-new  deny all
+#cache_peer_access wb-web4-new  allow new-site
+#cache_peer_access wb-web4-new  deny all
 
 
 
@@ -1681,65 +1674,61 @@ cache_peer_access wb-web4-new  deny all
 
 # web1
 cache_peer_access wb-web1  deny gbrowse2
-cache_peer_access wb-web1  deny gbrowse1
-cache_peer_access wb-web1  deny gbrowse1_proper
+#cache_peer_access wb-web1  deny gbrowse1
+#cache_peer_access wb-web1  deny gbrowse1_proper
 cache_peer_access wb-web1  deny mining
-cache_peer_access wb-web1  deny new-site
+#cache_peer_access wb-web1  deny new-site
 cache_peer_access wb-web1  deny biomart
 cache_peer_access wb-web1  deny synteny
 cache_peer_access wb-web1  deny social
 cache_peer_access wb-web1  allow db
 cache_peer_access wb-web1  allow web1-images
 cache_peer_access wb-web1  deny dynamic_images
-cache_peer_access wb-web1  deny dynamic_images-new
 cache_peer_access wb-web1  allow !db
 cache_peer_access wb-web1  deny all
 
 # web2
 cache_peer_access wb-web2  deny gbrowse2
-cache_peer_access wb-web2  deny gbrowse1
-cache_peer_access wb-web2  deny gbrowse1_proper
+#cache_peer_access wb-web2  deny gbrowse1
+#cache_peer_access wb-web2  deny gbrowse1_proper
 cache_peer_access wb-web2  deny mining
-cache_peer_access wb-web2  deny new-site
+#cache_peer_access wb-web2  deny new-site
 cache_peer_access wb-web2  deny biomart
 cache_peer_access wb-web2  deny synteny
 cache_peer_access wb-web2  deny social
 cache_peer_access wb-web2  allow db
 cache_peer_access wb-web2  allow web2-images
 cache_peer_access wb-web2  deny dynamic_images
-cache_peer_access wb-web2  deny dynamic_images-new
 cache_peer_access wb-web2  allow !db
 cache_peer_access wb-web2  deny all
 
 # web3
 cache_peer_access wb-web3  deny gbrowse2
-cache_peer_access wb-web3  deny gbrowse1
-cache_peer_access wb-web3  deny gbrowse1_proper
+#cache_peer_access wb-web3  deny gbrowse1
+#cache_peer_access wb-web3  deny gbrowse1_proper
 cache_peer_access wb-web3  deny mining
-cache_peer_access wb-web3  deny new-site
+#cache_peer_access wb-web3  deny new-site
 cache_peer_access wb-web3  deny biomart
 cache_peer_access wb-web3  deny synteny
 cache_peer_access wb-web3  deny social
 cache_peer_access wb-web3  allow db
 cache_peer_access wb-web3  allow web3-images
 cache_peer_access wb-web3  deny dynamic_images
-cache_peer_access wb-web3  deny dynamic_images-new
 cache_peer_access wb-web3  allow !db
 cache_peer_access wb-web3  deny all
 
 # web4
 cache_peer_access wb-web4  deny gbrowse2
-cache_peer_access wb-web4  deny gbrowse1
-cache_peer_access wb-web4  deny gbrowse1_proper
+#cache_peer_access wb-web4  deny gbrowse1
+#cache_peer_access wb-web4  deny gbrowse1_proper
 cache_peer_access wb-web4  deny mining
-cache_peer_access wb-web4  deny new-site
+#cache_peer_access wb-web4  deny new-site
 cache_peer_access wb-web4  deny biomart
 cache_peer_access wb-web4  deny synteny
 cache_peer_access wb-web4  deny social
 cache_peer_access wb-web4  allow db
 cache_peer_access wb-web4  allow web4-images
 cache_peer_access wb-web4  deny dynamic_images
-cache_peer_access wb-web4  deny dynamic_images-new
 cache_peer_access wb-web4  allow !db
 cache_peer_access wb-web4  deny all
 
@@ -1860,7 +1849,7 @@ hierarchy_stoplist cgi-bin ?
 #
 #Default:
 # cache_mem 8 MB
-cache_mem 16 MB
+cache_mem 32 MB
 
 #  TAG: maximum_object_size_in_memory	(bytes)
 #	Objects greater than this size will not be attempted to kept in
@@ -1870,6 +1859,7 @@ cache_mem 16 MB
 #
 #Default:
 # maximum_object_size_in_memory 8 KB
+maximum_object_size_in_memory 40 KB
 
 #  TAG: memory_replacement_policy
 #	The memory replacement policy parameter determines which
@@ -4837,7 +4827,7 @@ icp_port 3130
 #	If you disable this, it will appear as
 #
 #		X-Forwarded-For: unknown
-#
+# 
 #Default:
 # forwarded_for on
 
