splitting off gbrowse2 so some elements can be cached by proxy

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -639,7 +639,8 @@ acl mining url_regex wb_query aql_query class_query batch_genes searches/advance
 acl biomart url_regex biomart martview
 
 # GBrowse2 URLs: Done 7/23/2010
-acl gbrowse2 url_regex  gb2/gbrowse gb2-support gbrowse2 db/gb2 gbrowse_img gbrowse2/images
+acl gbrowse2        url_regex  gb2/gbrowse gbrowse2/i db/gb2 gbrowse_img
+acl gbrowse2_static url_regex gbrowse2/images gb2-support gbrowse2/css gbrowse2/js
 #acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
 #acl gbrowse1_proper     urlpath_regex ^/gbrowse
 
@@ -1585,8 +1586,8 @@ cache_peer 206.108.125.176 parent 8081 0 no-query no-digest originserver name=fo
 # brie6: 86 (broken)
 # brie3: 84
 #cache_peer 143.48.220.68 parent 8080 0 no-query no-digest originserver name=be1
-cache_peer 143.48.220.86 parent 80 0 no-query no-digest originserver round-robin name=brie6
-cache_peer 143.48.220.84 parent 80 0 no-query no-digest originserver round-robin name=brie3
+#cache_peer 143.48.220.86 parent 80 0 no-query no-digest originserver round-robin name=brie6
+#cache_peer 143.48.220.84 parent 80 0 no-query no-digest originserver round-robin name=brie3
 
 
 # The synteny browser - STILL on mckay.cshl.edu
@@ -1606,6 +1607,7 @@ cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biom
 # Special cases: allow from its like-named ACL; deny from all others
 # GBrowse2
 cache_peer_access gbrowse2 allow gbrowse2
+cache_peer_access gbrowse2 allow gbrowse2_static
 cache_peer_access gbrowse2 deny all
 
 # GBrowse1 (Legacy)
@@ -1640,15 +1642,15 @@ cache_peer_access biomart deny all
 
 # 2010.09.01: TRYING TO SERVE EVERYTING FROM OICR
 # Gene pages to brie6 or brie3
-cache_peer_access brie6 allow gene
-cache_peer_access brie6 deny all
-cache_peer_access brie3 allow gene
-cache_peer_access brie3 deny all
+#cache_peer_access brie6 allow gene
+#cache_peer_access brie6 deny all
+#cache_peer_access brie3 allow gene
+#cache_peer_access brie3 deny all
 cache_peer_access wb-web1  deny gene
-cache_peer_access wb-web2  deny gene
-cache_peer_access wb-web3  deny gene
-cache_peer_access wb-web4  deny gene
-
+cache_peer_access wb-web2  allow gene
+cache_peer_access wb-web3  allow gene
+cache_peer_access wb-web4  allow gene
+cache_peer_access wb-mining allow gene
 
 # /db and static requests, distributed across web1-web4
 # We have to deny gbrowse1/2 and mining because they are under /db.
@@ -1674,6 +1676,7 @@ cache_peer_access wb-web4  deny gene
 
 # web1
 cache_peer_access wb-web1  deny gbrowse2
+cache_peer_access wb-web1  deny gbrowse2_static
 #cache_peer_access wb-web1  deny gbrowse1
 #cache_peer_access wb-web1  deny gbrowse1_proper
 cache_peer_access wb-web1  deny mining
@@ -1689,6 +1692,7 @@ cache_peer_access wb-web1  deny all
 
 # web2
 cache_peer_access wb-web2  deny gbrowse2
+cache_peer_access wb-web2  deny gbrowse2_static
 #cache_peer_access wb-web2  deny gbrowse1
 #cache_peer_access wb-web2  deny gbrowse1_proper
 cache_peer_access wb-web2  deny mining
@@ -1704,6 +1708,7 @@ cache_peer_access wb-web2  deny all
 
 # web3
 cache_peer_access wb-web3  deny gbrowse2
+cache_peer_access wb-web3  deny gbrowse2_static
 #cache_peer_access wb-web3  deny gbrowse1
 #cache_peer_access wb-web3  deny gbrowse1_proper
 cache_peer_access wb-web3  deny mining
@@ -1719,6 +1724,7 @@ cache_peer_access wb-web3  deny all
 
 # web4
 cache_peer_access wb-web4  deny gbrowse2
+cache_peer_access wb-web4  deny gbrowse2_static
 #cache_peer_access wb-web4  deny gbrowse1
 #cache_peer_access wb-web4  deny gbrowse1_proper
 cache_peer_access wb-web4  deny mining
