MILESTONE! no longer pushing to CSHL. It's the end of an era.

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -34,8 +34,9 @@ SPECIES=("
 # The website itself
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
+#             brie6.cshl.org
+#	     be1.wormbase.org
 SITE_NODES=("
-	     be1.wormbase.org
              canopus.caltech.edu
      ")
 
@@ -84,9 +85,10 @@ OICR_ACEDB_NODES=("
 	wb-web3.oicr.on.ca
 	wb-web4.oicr.on.ca
 ")
-REMOTE_ACEDB_NODES=("brie3.cshl.org
-		     brie6.cshl.org
-		     canopus.caltech.edu")
+#REMOTE_ACEDB_NODES=("brie3.cshl.org
+#		     brie6.cshl.org
+#		     canopus.caltech.edu")
+REMOTE_ACEDB_NODES=("canopus.caltech.edu")
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
