fixed paths related to OICR move

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -1650,7 +1650,7 @@ cache_peer_access wb-web1  deny gene
 cache_peer_access wb-web2  allow gene
 cache_peer_access wb-web3  allow gene
 cache_peer_access wb-web4  allow gene
-cache_peer_access wb-mining allow gene
+cache_peer_access mining allow gene
 
 # /db and static requests, distributed across web1-web4
 # We have to deny gbrowse1/2 and mining because they are under /db.
