updated some paths for log file analysis; go-live end of september'

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -164,8 +164,10 @@ OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
 			wb-mining.oicr.on.ca
 			");
 
-REMOTE_SUPPORT_DB_NODES=("brie6.cshl.org
-			  canopus.caltech.edu
+#REMOTE_SUPPORT_DB_NODES=("brie6.cshl.org
+#			  canopus.caltech.edu
+#			  ");
+REMOTE_SUPPORT_DB_NODES=("canopus.caltech.edu
 			  ");
 
 ##############################
