updated log analysis with some new exclusions

--- a/log_analysis/analog.conf
+++ b/log_analysis/analog.conf
@@ -34,14 +34,18 @@ ARGSEXCLUDE /*
 
 # Exclude WormBase from the referrer reports (but not the logs themselves!)
 REFREPEXCLUDE http://*wormbase*
+REFREPEXCLUDE http://*oicr*
 
 # Exclude WormBase from the organization and domain reports
 ORGEXCLUDE www.wormbase*
 ORGEXCLUDE wormbase*
+ORGEXCLUDE oicr.on.ca
+REFSITEEXCLUDE http://*oicr*
 REFSITEEXCLUDE http://*wormbase*
 
 # Failure referrals
 FAILREFEXCLUDE http://*wormbase*
+FAILREFEXCLUDE http://*oicr*
 
 # Exclude meaningless words from the search word reports
 SEARCHWORDEXCLUDE of,and,or,to,the,in,on,a,for
