--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -119,11 +119,11 @@ OICR_MYSQL_NODES=("
 	wb-web4.oicr.on.ca
 ");
 
-REMOTE_MYSQL_NODES=("
-		brie3.cshl.org
-		brie6.cshl.org
-		canopus.caltech.edu")
-
+#REMOTE_MYSQL_NODES=("
+#		brie3.cshl.org
+#		brie6.cshl.org
+#		canopus.caltech.edu")
+REMOTE_MYSQL_NODES=("canopus.caltech.edu")
 
 
 # The location of the staging mysql data dir
