removed brie3 and brie6; added canopus; fixed name of remote sites

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -36,7 +36,7 @@ SPECIES=("
 # Nodes which serve pages and need the software. Also includes the staging node
 #             brie6.cshl.org
 #	     be1.wormbase.org
-SITE_NODES=("
+REMOTE_SITE_NODES=("
              canopus.caltech.edu
      ")
 
@@ -142,6 +142,7 @@ MYSQL_DATABASES=("b_malayi
                   c_remanei 
                   c_japonica 
 		  h_bacteriophora
+		  h_contortus
 		  m_hapla
 		  m_incognita
                   p_pacificus		  
