--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log /usr/local/wormbase/nginx/logs/nginx-access.log main;
+    access_log /usr/local/wormbase/logs/nginx-access.log main;
  
     # Load-balancing against a pool of fastcgi TCP sockets.
     # Simple load-balancing.
@@ -97,6 +97,9 @@ http {
        # do not cache when users are logged in..
        #        proxy_cache_bypass $cookie___ac;
 
+
+
+# fastcgi
        location / {
           include fastcgi_params; # We'll discuss this later
           # Unix socket
