some configuration files, since moved into the web app itself

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -665,7 +665,7 @@ acl mining-images url_regex dynamic_images/wb-mining
 acl dynamic_images     urlpath_regex ^/dynamic_images
 
 # ACL for the new website. These requests will ONLY be served from web1 for now.
-acl new-site url_regex rest db/seq/sequence db/seq/protein db/gene/variation jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png media reports
+#acl new-site url_regex rest db/seq/sequence db/seq/protein db/gene/variation jquery css/main.css css/wormbase_classic.css css/home.css js/miscellaneous.js js/search.js js/style.js js/log.js  js/effect.js img/classic_banner.jpg img/ui_widgets/blue_plus_small.png media reports
 
 
 #  TAG: http_access
@@ -1677,10 +1677,10 @@ cache_peer_access mining allow gene
 # web1
 cache_peer_access wb-web1  deny gbrowse2
 cache_peer_access wb-web1  deny gbrowse2_static
+#cache_peer_access wb-web1  deny new-site
 #cache_peer_access wb-web1  deny gbrowse1
 #cache_peer_access wb-web1  deny gbrowse1_proper
 cache_peer_access wb-web1  deny mining
-#cache_peer_access wb-web1  deny new-site
 cache_peer_access wb-web1  deny biomart
 cache_peer_access wb-web1  deny synteny
 cache_peer_access wb-web1  deny social
@@ -1693,10 +1693,10 @@ cache_peer_access wb-web1  deny all
 # web2
 cache_peer_access wb-web2  deny gbrowse2
 cache_peer_access wb-web2  deny gbrowse2_static
+#cache_peer_access wb-web2  deny new-site
 #cache_peer_access wb-web2  deny gbrowse1
 #cache_peer_access wb-web2  deny gbrowse1_proper
 cache_peer_access wb-web2  deny mining
-#cache_peer_access wb-web2  deny new-site
 cache_peer_access wb-web2  deny biomart
 cache_peer_access wb-web2  deny synteny
 cache_peer_access wb-web2  deny social
