--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -5,10 +5,8 @@ worker_processes  1;
 daemon off;
 
 
-# Error log
+# Error log; other directives: notice | info
 error_log  /usr/local/wormbase/logs/nginx-error.log warn;
-#error_log  /usr/local/wormbase/logs/nginx-error.log notice;
-#error_log  /usr/local/wormbase/logs/nginx-error.log info;
 
 # pid file (defaults to logs)
 pid        /usr/local/wormbase/nginx/logs/nginx.pid;
@@ -30,15 +28,21 @@ http {
     # Load-balancing against a pool of fastcgi TCP sockets.
     # Simple load-balancing.
     # Define as many servers as we like (and weight them)
+
+    # Load-balancing against a pool of starman sockets.
+    # Define as many servers as we have here and weight them.
     upstream wormbase  {
        # TCP socket
        # server 127.0.0.1:20000   # or unix socket or hostname      
 
-       # Unix socket on localhost
-       server unix:/tmp/wormbase.sock;
+       server 206.108.125.175:5000;
+#       server 206.108.125.177:5000;
 
        # Or server name with weights
        # server george.constantshift.com weight=3  # eg; weighting
+
+       # Unix socket on localhost
+       # server unix:/tmp/wormbase.sock;
     }
 
     sendfile        on;
@@ -47,14 +51,12 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
-
-
   server {
-      server_name beta.wormbase.org;
+#      server_name beta.wormbase.org;
+      server_name www.wormbase.org;
 
       # Where the reverse proxy will listen
-      listen      20000;
+      listen      2011;
 
       #charset koi8-r;
       #access_log  logs/host.access.log  main;
@@ -101,36 +103,51 @@ http {
 
 # fastcgi
        location / {
-          include fastcgi_params; # We'll discuss this later
-          # Unix socket
-          # fastcgi_pass unix:/tmp/myapp.fcgi;
+
+            ########################################
+            #  Pool of fastcgi sockets
+            ######################################## 
+#           include fastcgi_params; # We'll discuss this later
+            # Unix socket
+            # fastcgi_pass unix:/tmp/myapp.fcgi;
    
-          # TCP socket
-          # fastcgi_pass  127.0.0.1:10004;
+            # TCP socket
+            # fastcgi_pass  127.0.0.1:10004;
 	  
-          # Or load-balanced pool (currently of one)
-          fastcgi_pass wormbase;
+            # Or load-balanced pool (currently of one)
+#           fastcgi_pass wormbase;
 
-#          proxy_redirect   off;
-#          proxy_set_header Host $host;
-#          proxy_set_header X-Real-IP $remote_addr;
-#          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#          proxy_pass  http://wormbase;
-#	  client_max_body_size            0;
-#  	  client_body_buffer_size         128k;
-#	  proxy_send_timeout              120;
-#	  proxy_buffer_size               4k;
-#	  proxy_buffers                   4 32k;
-#	  proxy_busy_buffers_size         64;
-#	  proxy_temp_file_write_size      64k;
-#	  proxy_connect_timeout           75;
-#	  proxy_read_timeout              205;
+            ########################################
+            #  Pool of PSGI/Starman hosts
+            ######################################## 
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
+           
+	    # Proxy pass to a single server for testing:
+            # changed from http://localhost:5000/ which was causing double forward slash problems in the url
+#            proxy_pass http://localhost:5000;
+            # Or to our pool of servers.
+	    proxy_pass http://wormbase;
 
-          # proxy_pass http://plone/VirtualHostBase/http/www.example.com:80/Plone/VirtualHostRoot/;
+#           proxy_redirect   off;
+   	    client_max_body_size            0;
+            client_body_buffer_size         128k;
+	    proxy_send_timeout              120;
+	    proxy_buffer_size               4k;
+	    proxy_buffers                   4 32k;
+  	    proxy_busy_buffers_size         64k;
+ 	    proxy_temp_file_write_size      64k;
+ 	    proxy_connect_timeout           75;
+  	    proxy_read_timeout              205;
+
   	# Back end server configuration
   #            root   html;
   #            index  index.html index.htm;
 
+           # Caching diretives
 #          proxy_cache_bypass $cookie___ac;
 #          proxy_cache thecache;
 #          proxy_cache_key $scheme$proxy_host$request_uri;
@@ -142,7 +159,7 @@ http {
         }
 
 
-
+	# Examples on how to send certain things to certain places
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         #location ~ \.php$ {
