searching and renaming log file

--- a/log4perl.conf
+++ b/log4perl.conf
@@ -3,7 +3,7 @@
 # The root logger has a very low threshold for development
 log4perl.rootlogger=DEBUG, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
-log4perl.appender.logfile.filename=logs/rearchitecture.error_log
+log4perl.appender.logfile.filename=logs/catalyst_error.log
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
