added server alias

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -36,7 +36,10 @@ http {
        # server 127.0.0.1:20000   # or unix socket or hostname      
 
        server 206.108.125.175:5000;
-#       server 206.108.125.177:5000;
+       server 206.108.125.177:5000;
+       server 206.108.125.190:5000;
+       server 206.108.125.168:5000;
+       server 206.108.125.178:5000;
 
        # Or server name with weights
        # server george.constantshift.com weight=3  # eg; weighting
@@ -53,7 +56,7 @@ http {
 
   server {
 #      server_name beta.wormbase.org;
-      server_name www.wormbase.org;
+      server_name www.wormbase.org wormbase.org;
 
       # Where the reverse proxy will listen
       listen      2011;
