set up staging environment

--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -48,25 +48,21 @@ http {
 
 #############################################
 #
-#  beta.wormbase.org
-#
-#  Listening on 80, starman on 5000
+#  staging.wormbase.org; starman on 5000
 #
 #############################################
 
 server {
-      server_name beta.wormbase.org;
-
-      # Where the reverse proxy will listen
+      server_name staging.wormbase.org;
       listen      80;
 
       #charset koi8-r;
       #access_log  logs/host.access.log  main;
 		       
-       access_log /usr/local/wormbase/logs/development-cache.log cache;
-       access_log /usr/local/wormbase/logs/development-access.log main;
+       access_log /usr/local/wormbase/website/staging/logs/cache.log cache;
+       access_log /usr/local/wormbase/website/staging/access.log main;
        # Error log; other directives: notice | info
-       error_log  /usr/local/wormbase/logs/development-error.log warn;
+       error_log  /usr/local/wormbase/website/staging/logs/error.log warn;
 
        # Enable gzip compression
        gzip             on;
@@ -142,7 +138,7 @@ server {
         }
 
         location /static {
-            root  /usr/local/wormbase/website/development/root;
+            root  /usr/local/wormbase/website/staging/root;
         }
     }
 
@@ -158,8 +154,6 @@ server {
 
   server {
       server_name dev.wormbase.org;
-
-      # Where the reverse proxy will listen
       listen      80;
 
       #charset koi8-r;
@@ -255,7 +249,7 @@ server {
 #
 #############################################
  server {
-      server_name todd.wormbase.org
+      server_name todd.wormbase.org;
       listen      80;
 
       #charset koi8-r;
@@ -352,7 +346,7 @@ server {
 #
 #############################################
  server {
-      server_name abby.wormbase.org
+      server_name abby.wormbase.org;
       listen 80;
 		       
       access_log /usr/local/wormbase/website/acabunoc/logs/cache.log cache;
@@ -416,7 +410,7 @@ server {
 #
 #############################################
  server {
-      server_name xshi.wormbase.org
+      server_name xshi.wormbase.org;
       listen 80;
 		       
       access_log /usr/local/wormbase/website/xshi/logs/cache.log cache;
@@ -484,7 +478,7 @@ server {
 #
 #############################################
  server {
-      server_name norie.wormbase.org
+      server_name norie.wormbase.org;
       listen 80;
 		       
       access_log /usr/local/wormbase/website/norie/logs/cache.log cache;
